# TrackerSpeechRecognizer

./: .bumpversion.cfg  .gitignore  Dockerfile  Makefile  docker-compose.yml  entrypoint.sh  env.template  pyproject.toml
.github/workflows/: buildx-docker-image.yml  codeql-analysis.yml  linters.yml
speech_recognizer/: logger.py  main.py  recognizer.py  schemas.py  settings.py
tests/: test_speech_recognizer.py
